<resources>
    <string name="app_name">FilmFun4Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    / LIST LABELS
    <string name="movies_label">Movies</string>
    <string name="tv_label">TVShows</string>

    // DETAIL LABELS
    <string name="movie_details_label">Movie details</string>
    <string name="tv_details_label">TVShow details</string>

    // DETAIL LABELS
    <string name="detail_language_label">Original language : </string>
    <string name="detail_overview_label">Overview : </string>
    <string name="detail_date_label">Release date : </string>
    <string name="detail_reviews_label">Reviews </string>
    <string name="detail_reviews_plus">+</string>
    <string name="detail_season_label">Seasons</string>

    // SEARCH
    <string name="search">Search</string>

    // TAB LABELS
    <string name="most_popular_label">Most popular</string>
    <string name="highest_rated_label">Highest rated</string>
    <string name="upcoming_label">Upcoming</string>

    // CONNECTION STRINGS
    <string name="connection_re_established">Connection re-established!</string>
    <string name="no_network_connection">No network connection!</string>

    // ERROR STRINGS
    <string name="details_not_available">Details not available</string>
    <string name="list_not_available">List not available</string>
    <string name="details_check_internet">Details not available!\ Please check your internet connection! </string>
    <string name="list_check_internet">List not available!\ Please check your internet connection! </string>
</resources>
