<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".activity.activity.detail.view.DetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_view_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_not_available"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_movie_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_detail_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_genre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_detail_rating"
            app:layout_constraintTop_toBottomOf="@id/image_view_poster"/>

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_genre"
            app:layout_constraintLeft_toRightOf="@id/tv_detail_movie_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_poster"/>

        <TextView
            android:id="@+id/tv_detail_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_overview_label"
            app:layout_constraintLeft_toLeftOf="@id/tv_detail_movie_title"
            app:layout_constraintRight_toLeftOf="@id/tv_detail_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_title"/>

        <TextView
            android:id="@+id/tv_detail_overview_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/detail_overview_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_overview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_genre"/>


        <TextView
            android:id="@+id/tv_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="6dp"
            android:paddingRight="10dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_overview"
            app:layout_constraintLeft_toLeftOf="@id/tv_detail_overview_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_overview_label"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.activity.detail.view.DetailFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_detail_lang_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/detail_language_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_lang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:textSize="16sp" />


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_detail_date_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/detail_date_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_review_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_review_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/detail_reviews_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_drop_rev_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/detail_reviews_plus"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_season_button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_seasons_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/detail_season_label"
                android:textColor="@color/colorSeasonsAndReviews"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_reviews_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_detail_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>
