<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.activity.detail.view.DetailMovieFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/movie_details_container_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_movie_cover"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@id/image_view_movie_poster"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_movie_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_overview_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_detail_movie_title"
                app:layout_constraintTop_toBottomOf="@id/image_view_movie_cover" />

            <TextView
                android:id="@+id/tv_detail_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_genre"
                app:layout_constraintLeft_toRightOf="@id/image_view_movie_poster"
                app:layout_constraintRight_toLeftOf="@+id/tv_detail_rating"
                app:layout_constraintTop_toTopOf="@id/image_view_movie_poster" />

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="end"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_movie_title"
                app:layout_constraintLeft_toRightOf="@id/tv_detail_movie_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail_movie_title" />

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/image_view_movie_poster"
                app:layout_constraintLeft_toRightOf="@id/image_view_movie_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_title" />

            <TextView
                android:id="@+id/tv_detail_overview_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/detail_overview_label"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_overview"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_movie_poster" />


            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_lang_label"
                app:layout_constraintLeft_toLeftOf="@id/tv_detail_overview_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_overview_label" />

            <TextView
                android:id="@+id/tv_detail_lang_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/detail_language_label"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_date_label"
                app:layout_constraintLeft_toLeftOf="@id/tv_detail_overview_label"
                app:layout_constraintRight_toLeftOf="@id/tv_detail_lang"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_overview" />

            <TextView
                android:id="@+id/tv_detail_lang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_date_label"
                app:layout_constraintLeft_toRightOf="@id/tv_detail_lang_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail_lang_label" />

            <TextView
                android:id="@+id/tv_detail_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/detail_date_label"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_movie_trailers_label"
                app:layout_constraintLeft_toLeftOf="@id/tv_detail_overview_label"
                app:layout_constraintRight_toLeftOf="@id/tv_detail_release_date"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_lang_label" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_date_label"
                app:layout_constraintLeft_toRightOf="@id/tv_detail_date_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail_date_label" />

            <TextView
                android:id="@+id/tv_detail_movie_trailers_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:text="Trailers"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/recycler_movie_videos"
                app:layout_constraintLeft_toLeftOf="@id/tv_detail_date_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_date_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_movie_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:padding="4dp"
                app:layout_constraintBottom_toTopOf="@id/tv_review_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_movie_trailers_label">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_review_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorReviewItem"
                android:padding="10dp"
                android:text="@string/detail_reviews_label"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/recycler_detail_reviews"
                app:layout_constraintLeft_toLeftOf="@id/tv_detail_date_label"
                app:layout_constraintRight_toLeftOf="@id/button_drop_rev"
                app:layout_constraintTop_toBottomOf="@id/recycler_movie_videos" />

            <Button
                android:id="@+id/button_drop_rev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorReviewItem"
                android:gravity="end"
                android:padding="6dp"
                android:text="@string/detail_reviews_plus"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_review_label"
                app:layout_constraintLeft_toRightOf="@id/tv_review_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_review_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_detail_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_review_label" />

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar_movie_details"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_not_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/details_not_available"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>


